--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -139,7 +139,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ${{ env.TERRAFORM_DIRECTORY }}
+        working-directory: .github/terraform
 
     steps:
       - name: Install Terraform
