--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -133,29 +133,43 @@ jobs:
           # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issuesclear
 
   initialize-terraform:
-    name: Terraforn init
+    name: 'Terraform'
     runs-on: ubuntu-latest
-    needs: [scan-terraform-config]
+    environment: Development
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
-        working-directory: .github/terraform
 
     steps:
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3.1.2
-        with:
-          terraform_version: 1.9.8
+    # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v4
 
-      - name: Terraform Init
-        id: init
-        run: |
-          # Initialize a new or existing Terraform working directory by creating initial files, 
-          # loading any remote state, downloading modules, etc.
+    - name: Install Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.9.8
 
-          terraform init
-          
-          # Either use the backend.tf file with the config inside or use the following command line
-          # terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT_NAME" \
-          #                -backend-config="container_name=$CONTAINER_NAME" \
-          #                -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
+    - name: Terraform Init
+      id: init
+      env:
+        ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+        ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+      run: |
+        # Initialize a new or existing Terraform working directory by creating initial files, 
+        # loading any remote state, downloading modules, etc.
+
+        terraform init
+        
+        # Either use the backend.tf file with the config inside or use the following command line
+        # terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT_NAME" \
+        #                -backend-config="container_name=$CONTAINER_NAME" \
+        #                -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
+
+
+
+
