--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -18,6 +18,8 @@ permissions:
 
 jobs:
 
+#######################################################################################################################################################################################################
+
   deploy-azure-infra-terraform:
     name: Deploy to Azure with Terraform
     runs-on: ubuntu-latest
@@ -101,6 +103,7 @@ jobs:
           echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
           az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
+#######################################################################################################################################################################################################
 
   scan-terraform-config:
     runs-on: ubuntu-latest
@@ -128,6 +131,8 @@ jobs:
           # baseline: cloudformation/.checkov.baseline # optional: Path to a generated baseline file. Will only report results not in the baseline.
           # container_user: 1000 # optional: Define what UID and / or what GID to run the container under to prevent permission issuesclear
 
+#######################################################################################################################################################################################################
+
   initialize-terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
@@ -150,24 +155,17 @@ jobs:
       with:
         terraform_version: 1.9.8
 
-    - name: Terraform Init
-      id: init
-      env:
-        ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+    - name: Initializing terraform
       run: |
-        # Initialize a new or existing Terraform working directory by creating initial files, 
-        # loading any remote state, downloading modules, etc.
-
-        terraform init
-        
-        # Either use the backend.tf file with the config inside or use the following command line
-        # terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT_NAME" \
-        #                -backend-config="container_name=$CONTAINER_NAME" \
-        #                -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
-
+        echo "🎯 Running Terraform Init!"
+        terraform init \
+          -upgrade \
+          -backend-config="resource_group_name=${RESOURCE_GROUP_NAME}" \
+          -backend-config="storage_account_name=${STORAGE_ACCOUNT_NAME}" \
+          -backend-config="container_name=${CONTAINER_NAME}" \
+          -backend-config="key=${STORAGE_ACCOUNT_KEY}" \
+          -input=true \
+          -reconfigure
 
 
 
