--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -163,7 +163,7 @@ jobs:
           -backend-config="resource_group_name=${RESOURCE_GROUP_NAME}" \
           -backend-config="storage_account_name=${STORAGE_ACCOUNT_NAME}" \
           -backend-config="container_name=${CONTAINER_NAME}" \
-          -backend-config="key=${TBLOB_NAME}" \
+          -backend-config="key=${BLOB_NAME}" \
           -input=true \
           -reconfigure
 
