--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -160,10 +160,10 @@ jobs:
         echo "🎯 Running Terraform Init!"
         terraform init \
           -upgrade \
-          -backend-config="resource_group_name=${RESOURCE_GROUP_NAME}" \
-          -backend-config="storage_account_name=${STORAGE_ACCOUNT_NAME}" \
-          -backend-config="container_name=${CONTAINER_NAME}" \
-          -backend-config="key=${BLOB_NAME}" \
+          -backend-config="resource_group_name=${{ vars.RESOURCE_GROUP_NAME }}" \
+          -backend-config="storage_account_name=${{ vars.STORAGE_ACCOUNT_NAME }}" \
+          -backend-config="container_name=${{ vars.CONTAINER_NAME }}" \
+          -backend-config="key=${{ vars.BLOB_NAME }}" \
           -input=true \
           -reconfigure
 
