--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -20,88 +20,104 @@ jobs:
 
 #######################################################################################################################################################################################################
 
-  # deploy-azure-infra-terraform:
-  #   name: Deploy to Azure with Terraform
-  #   runs-on: ubuntu-latest
-  #   environment: Development
+  deploy-azure-infra-terraform:
+    name: Deploy to Azure with Terraform
+    runs-on: ubuntu-latest
+    environment: Development
 
-  #   # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-  #   defaults:
-  #     run:
-  #       shell: bash
-  #       working-directory: ./
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./
 
-  #   steps:
-  #     # Checkout the repository to the GitHub Actions runner
-  #     - name: Checkout
-  #       uses: actions/checkout@v4.2.2
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
 
-  #     # Login to Azure with OIDC
-  #     - name: Azure login
-  #       uses: azure/login@v2.2.0
-  #       with:
-  #         client-id: ${{ secrets.CLIENT_ID }}
-  #         tenant-id: ${{ secrets.TENANT_ID }}
-  #         subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+      # Login to Azure with OIDC
+      - name: Azure login
+        uses: azure/login@v2.2.0
+        with:
+          client-id: ${{ secrets.CLIENT_ID }}
+          tenant-id: ${{ secrets.TENANT_ID }}
+          subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
     
-  #     - name: Azure CLI script
-  #       uses: azure/cli@v2
-  #       with:
-  #         azcliversion: latest
-  #         inlineScript: |
-  #           az account show
+      - name: Azure CLI script
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
     
-  #     - name: Create Terraform backend state storage
-  #       run: |
-  #         echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
-  #         az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
+      - name: Create Terraform backend state storage
+        run: |
+          echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
+          az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
-  #         echo "🎯 Getting resource group named: " ${{ vars.RESOURCE_GROUP_NAME }}
-  #         RG_EXISTS=$(az group exists --name ${{ vars.RESOURCE_GROUP_NAME }} )
-  #         if [ $RG_EXISTS == "false" ]; then
-  #           echo "Resource group not found, creating... "
-  #           az group create --name ${{ vars.RESOURCE_GROUP_NAME }} --location ${{ vars.LOCATION }}
-  #         fi
-  #         RESOURCE_GROUP_ID=$(az group show -n ${{ vars.RESOURCE_GROUP_NAME }}  -o tsv --query id)
+          echo "🎯 Getting resource group named: " ${{ vars.RESOURCE_GROUP_NAME }}
+          RG_EXISTS=$(az group exists --name ${{ vars.RESOURCE_GROUP_NAME }} )
+          if [ $RG_EXISTS == "false" ]; then
+            echo "Resource group not found, creating... "
+            az group create --name ${{ vars.RESOURCE_GROUP_NAME }} --location ${{ vars.LOCATION }}
+          fi
+          RESOURCE_GROUP_ID=$(az group show -n ${{ vars.RESOURCE_GROUP_NAME }}  -o tsv --query id)
 
-  #         echo "🎯 Getting storage account named: " ${{ vars.STORAGE_ACCOUNT_NAME }}
-  #         STORAGE_ACCOUNT_NOT_FOUND=$(az storage account check-name --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query nameAvailable)
-  #         if [ $STORAGE_ACCOUNT_NOT_FOUND == "true" ]; then
-  #             echo ""
-  #             echo "Storage account not found. Creating..."
-  #           az storage account create --resource-group ${{ vars.RESOURCE_GROUP_NAME }} --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --sku Standard_LRS --encryption-services blob
-  #         fi
-  #         STORAGE_ACCOUNT=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}  -o tsv --query id)
+          echo "🎯 Getting storage account named: " ${{ vars.STORAGE_ACCOUNT_NAME }}
+          STORAGE_ACCOUNT_NOT_FOUND=$(az storage account check-name --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query nameAvailable)
+          if [ $STORAGE_ACCOUNT_NOT_FOUND == "true" ]; then
+            echo ""
+            echo "Storage account not found. Creating..."
+            az storage account create --resource-group ${{ vars.RESOURCE_GROUP_NAME }} --name ${{ vars.STORAGE_ACCOUNT_NAME }}  --sku Standard_LRS --encryption-services blob
+          fi
+          STORAGE_ACCOUNT=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}  -o tsv --query id)
 
-  #         echo "🎯 Getting storage account container named: " ${{ vars.CONTAINER_NAME }}
-  #         STORAGE_COUNTAINER_EXISTS=$(az storage container exists --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query exists)
-  #         if [ $STORAGE_COUNTAINER_EXISTS == "false" ]; then
-  #           echo ""
-  #           echo "Blob container not found. Creating..."
-  #           az storage container create --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}
-  #         fi
-  #         STORAGE_CONTAINER=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}   -o tsv --query primaryEndpoints.blob)${{ vars.CONTAINER_NAME }}
+          echo "🎯 Getting storage account container named: " ${{ vars.CONTAINER_NAME }}
+          STORAGE_COUNTAINER_EXISTS=$(az storage container exists --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query exists)
+          if [ $STORAGE_COUNTAINER_EXISTS == "false" ]; then
+            echo ""
+            echo "Blob container not found. Creating..."
+            az storage container create --name ${{ vars.CONTAINER_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}
+          fi
+          STORAGE_CONTAINER=$(az storage account show --name ${{ vars.STORAGE_ACCOUNT_NAME }}   -o tsv --query primaryEndpoints.blob)${{ vars.CONTAINER_NAME }}
 
-  #         echo "🎯 Getting storage account key..."
-  #         STORAGE_ACCOUNT_KEY=$(az storage account keys list --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --account-name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "[0].value" -o tsv)
+          echo "🎯 Getting storage account key..."
+          STORAGE_ACCOUNT_KEY=$(az storage account keys list --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --account-name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "[0].value" -o tsv)
 
-  #         echo "🎯 Getting storage connection string..."
-  #         STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
-  #         echo $STORAGE_ACCOUNT_CONNECTION_STRING
+          echo "🎯 Getting storage connection string..."
+          STORAGE_ACCOUNT_CONNECTION_STRING=$(az storage account show-connection-string --resource-group ${{ vars.RESOURCE_GROUP_NAME }}  --name ${{ vars.STORAGE_ACCOUNT_NAME }} --query "connectionString"  -o tsv)
+          echo $STORAGE_ACCOUNT_CONNECTION_STRING
 
-  #     # Run 'az acr update -n adcpersonahubdev --admin-enabled true' to enable admin first.
-  #     - name: Getting ACR credentials
-  #       run: |
+            echo "🎯 Getting storage blob named: " ${{ vars.BLOB_NAME }}
+            STORAGE_BLOB_EXISTS=$(az storage blob exists --name ${{ vars.BLOB_NAME }} --account-name ${{ vars.STORAGE_ACCOUNT_NAME }}  --query exists)
+            if [ $STORAGE_BLOB_EXISTS == "false" ]; then
+             echo ""
+             echo "Storage blob not found. Creating..."
+            cat <<EOT > terraform.tfstate
+            terraform {
+              backend "azurerm" {
+                resource_group_name   = "${{ vars.RESOURCE_GROUP_NAME }}"
+                storage_account_name  = "${{ vars.STORAGE_ACCOUNT_NAME  }}"
+                container_name        = "${{  vars.$CONTAINER_NAME }}"
+                key                   = "${{ vars.BLOB_NAME }}"
+              }
+            }
+            EOT
+
+      # Run 'az acr update -n adcpersonahubdev --admin-enabled true' to enable admin first.
+      - name: Getting ACR credentials
+        run: |
           
-  #         echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ACR_ID }}
-  #         az account set --subscription ${{ secrets.SUBSCRIPTION_ACR_ID }}
+          echo "🎯 Setting default subscription for: " ${{ secrets.SUBSCRIPTION_ACR_ID }}
+          az account set --subscription ${{ secrets.SUBSCRIPTION_ACR_ID }}
           
-  #         echo "🎯 Getting container registry data..."
-  #         ACR_PASSWORD=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.passwords[0].value')
-  #         ACR_USERNAME=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.username')
+          echo "🎯 Getting container registry data..."
+          ACR_PASSWORD=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.passwords[0].value')
+          ACR_USERNAME=$(az acr credential show --name ${{ vars.ACR_SERVER }} | jq -r '.username')
 
-  #         echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
-  #         az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
+          echo "🎯 Changing default subscription for: " ${{ secrets.SUBSCRIPTION_ID }}
+          az account set --subscription ${{ secrets.SUBSCRIPTION_ID }}
 
 #######################################################################################################################################################################################################
 
@@ -164,16 +180,15 @@ jobs:
   #       tenant-id: ${{ secrets.TENANT_ID }}
   #       subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
 
-  #       run: |
-  #         echo "🎯 Running Terraform Init!"
-  #         terraform init \
-  #           -upgrade \
-  #           -backend-config="resource_group_name=${{ vars.RESOURCE_GROUP_NAME }}" \
-  #           -backend-config="storage_account_name=${{ vars.STORAGE_ACCOUNT_NAME }}" \
-  #           -backend-config="container_name=${{ vars.CONTAINER_NAME }}" \
-  #           -backend-config="key=${{ vars.BLOB_NAME }}" \
-  #           -input=true \
-  #           -reconfigure
+    - name: Terraform Init
+      run: terraform init \
+            -upgrade \
+            -backend-config="resource_group_name=${{ vars.RESOURCE_GROUP_NAME }}" \
+            -backend-config="storage_account_name=${{ vars.STORAGE_ACCOUNT_NAME }}" \
+            -backend-config="container_name=${{ vars.CONTAINER_NAME }}" \
+            -backend-config="key=${{ vars.BLOB_NAME }}" \
+            -input=true \
+            -reconfigure
 
 
   #         echo "🎯 Running Terraform Plan
