--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   PROCESS: planning
-  TERRAFORM_DIRECTORY: ../terraform
+  TERRAFORM_DIRECTORY: .github/terraform
 
 permissions:
   id-token: write
