--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -165,20 +165,16 @@ jobs:
 
   #   # Initializing terraform
 
-  #   - name: Azure login
-  #     uses: azure/login@v2.2.0
-  #     with:
-  #       client-id: ${{ secrets.CLIENT_ID }}
-  #       tenant-id: ${{ secrets.TENANT_ID }}
-  #       subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
+    - name: Azure login
+      uses: azure/login@v2.2.0
+      with:
+        client-id: ${{ secrets.CLIENT_ID }}
+        tenant-id: ${{ secrets.TENANT_ID }}
+        subscription-id: ${{ secrets.SUBSCRIPTION_ID }}
 
     - name: Terraform Init
       id: init
-      env:
-        ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-        ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
-        ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+
       run: |
 
         terraform init
