--- a/.github/workflows/tf-setup.yml
+++ b/.github/workflows/tf-setup.yml
@@ -2,7 +2,7 @@ name: Create Infra with Terraforn
 
 on:
   push:
-    branches: [dev]
+  # branches: [dev]
   # pull_request:
   #   branches: [ main ]
 # Allows to run this workflow manually from the Actions tab
@@ -141,50 +141,3 @@ jobs:
 
 #######################################################################################################################################################################################################
 
-  initialize-terraform:
-    name: 'Terraform'
-    runs-on: ubuntu-latest
-    environment: Development
-#    needs: [scan-terraform-config]
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ env.TERRAFORM_DIRECTORY }}
-
-    steps:
-      # Checkout the repository to the GitHub Actions runner
-      - name: Checkout
-        uses: actions/checkout@v4.2.2
-
-      - name: Login to Azure with Service Principal
-        uses: Azure/login@v2.2.0
-        with:
-          # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-
-      # Install the latest version of Terraform CLI
-      - name: Install Terraform
-        uses: hashicorp/setup-terraform@v3.1.2
-        with:
-          terraform_version: 1.9.8
-
-      - name: Terraform Init
-        id: init
-        env:
-          ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
-        run: |
-          # Initialize a new or existing Terraform working directory by creating initial files, 
-          # loading any remote state, downloading modules, etc.
-
-          terraform init
-          
-          # Either use the backend.tf file with the config inside or use the following command line
-          # terraform init -backend-config="storage_account_name=$STORAGE_ACCOUNT_NAME" \
-          #                -backend-config="container_name=$CONTAINER_NAME" \
-          #                -backend-config="resource_group_name=$RESOURCE_GROUP_NAME"
