--- a/.github/workflows/tf-remote-state.yml
+++ b/.github/workflows/tf-remote-state.yml
@@ -49,7 +49,7 @@ jobs:
 
             # Create storage account
             az storage account create --name ${{ vars.STORAGE_ACCOUNT_NAME }} \
-              --resource-group $RESOURCE_GROUP_NAME \
+              --resource-group ${{ vars.RESOURCE_GROUP_NAME }} \
               --sku Standard_LRS \
               --encryption-services blob
 
